Criando form para pesquisa por nome

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.httpcore-4.4.4.jar=lib/httpcore-4.4.4.jar
 file.reference.httpmime-4.5.2.jar=lib/httpmime-4.5.2.jar
 file.reference.jna-4.1.0.jar=lib/jna-4.1.0.jar
 file.reference.jna-platform-4.1.0.jar=lib/jna-platform-4.1.0.jar
+file.reference.json-20160810.jar=C:\\Users\\Marcos Paulo\\Downloads\\json-20160810.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -51,7 +52,8 @@ javac.classpath=\
     ${file.reference.httpcore-4.4.4.jar}:\
     ${file.reference.httpmime-4.5.2.jar}:\
     ${file.reference.jna-4.1.0.jar}:\
-    ${file.reference.jna-platform-4.1.0.jar}
+    ${file.reference.jna-platform-4.1.0.jar}:\
+    ${file.reference.json-20160810.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -77,7 +79,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=conexao.Teste
+main.class=conexao.LeagueOfIA
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
