CrowdControlDealt implementado(não para cada time ainda)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.httpmime-4.5.2.jar=lib/httpmime-4.5.2.jar
 file.reference.jna-4.1.0.jar=lib/jna-4.1.0.jar
 file.reference.jna-platform-4.1.0.jar=lib/jna-platform-4.1.0.jar
 file.reference.json-20160810.jar=C:\\Users\\Marcos Paulo\\Downloads\\json-20160810.jar
+file.reference.json-20160810.jar-1=lib\\json-20160810.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -53,7 +54,8 @@ javac.classpath=\
     ${file.reference.httpmime-4.5.2.jar}:\
     ${file.reference.jna-4.1.0.jar}:\
     ${file.reference.jna-platform-4.1.0.jar}:\
-    ${file.reference.json-20160810.jar}
+    ${file.reference.json-20160810.jar}:\
+    ${file.reference.json-20160810.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
